src/components/Header/styles.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/mixins';

.page-header {
  @include flex-row-space-between-center;
  position: sticky;
  top: 0;
  width: 100%;
  padding: 1rem;

  &[data-theme="light"] {
    border-bottom: 1px solid rgba($color-black, 0.24);
  }
  &[data-theme="dark"] {
    border-bottom: 1px solid rgba($color-white, 0.24);
  }

  > .logo-img {
    width: 8rem;
    height: auto;

    cursor: pointer;
  }

  > .buttons-bar-wrapper {
    @include flex-row-center-center;
    gap: 1rem;

    button {
      padding: 1rem;
      border-radius: .4rem;

      color: $color-white;
      font-size: $font-size-normal;
      font-weight: $font-weight-semi-bold;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      
      cursor: pointer;
      
      &:hover {
        transition: background-color 300ms, box-shadow 300ms;
      }
    }

    .login-button {
      background-color: $color-neutral-700;
      &:hover {
        background-color: $color-slate-500;
      }

      &[data-theme="light"] {
        &:hover {
          box-shadow: $color-slate-300  0px 0px 4px 0px, $color-slate-300  0px 0px 16px 0px;
        }
      }
      &[data-theme="dark"] {
        &:hover {
          box-shadow: $color-slate-600  0px 0px 4px 0px, $color-slate-600  0px 0px 8px 0px;
        }
      }
    }

    .signup-button {
      background-color: $color-pink;
      &:hover {
        background-color: $color-dark-pink;
      }

      &[data-theme="light"] {
        &:hover {
          box-shadow: $color-slate-300  0px 0px 4px 0px, $color-slate-300  0px 0px 16px 0px;
        }
      }
      &[data-theme="dark"] {
        &:hover {
          box-shadow: $color-slate-300  0px 0px 4px 0px, $color-slate-300  0px 0px 8px 0px;
        }
      }
    }

    > .theme-icon {
      width: 2.4rem;
      height: auto;
      padding: .4rem;
      border-radius: 50%;

      cursor: pointer;

      &:hover {
        transition: background-color 300ms;
      }

      &[data-theme="light"] {
        color: $color-black;

        &:hover {
          background-color: $color-slate-200;
        }
      }

      &[data-theme="dark"] {
        color: $color-white;

        &:hover {
          background-color: $color-slate-300;
        }
      }
    }
  }
}

